--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js">
-  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" />
   <title>Exceptional Realty Group - Luxury Homes - Contact</title>
 </head>
 <body>
@@ -66,7 +65,7 @@
           <a href="#" target="_blank">Professional Moving Crew</a>
         </p>
       </div>
-      
+
       <div>
         <h3>Follow</h3>
         <p>
@@ -80,6 +79,6 @@
     <footer>
       &copy; 2014 Exceptional Realty. All Rights Reserved.
     </footer>
-  
+
 </body>
 </html>
